[package]
name = "ecs-game-server"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
bevy_internal = { version = "0.15", features = ["sysinfo_plugin", "multi_threaded"] }

[workspace]
members = [
    "combat-engine",
    "game-server",
    "net"
]

[[bin]]
name = "gen-rtn-struct"
path = "bin/gen_rtn_struct.rs"
